[gd_scene load_steps=38 format=3 uid="uid://c4qtjnfmiloag"]

[ext_resource type="Texture2D" uid="uid://d3us1uv3f8iy5" path="res://assets/sprites/characters/enemys/mal_cabeado_ataque.png" id="1_7yth2"]
[ext_resource type="Script" uid="uid://dqid2eq88fhn1" path="res://scripts/mal_cabeado.gd" id="1_xbayu"]
[ext_resource type="PackedScene" uid="uid://cr5rxw3y74s46" path="res://scenes/particles/spriteExplosion.tscn" id="2_aoqhr"]
[ext_resource type="Texture2D" uid="uid://ca432sf38qyym" path="res://assets/sprites/characters/enemys/mal_cabeado_cabo.png" id="2_xbayu"]
[ext_resource type="Texture2D" uid="uid://cdbnnxc6iq8fi" path="res://assets/sprites/characters/enemys/mal_cabeado.png" id="3_ops3k"]
[ext_resource type="Shader" uid="uid://b48snv0g75ss0" path="res://scripts/shaders/cmos.gdshader" id="5_ops3k"]
[ext_resource type="PackedScene" uid="uid://c16d0lihpmv54" path="res://scenes/others/health_bar.tscn" id="6_fgp7v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fgp7v"]
atlas = ExtResource("1_7yth2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoqhr"]
atlas = ExtResource("1_7yth2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ajpc"]
atlas = ExtResource("1_7yth2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsu7v"]
atlas = ExtResource("1_7yth2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu5kw"]
atlas = ExtResource("1_7yth2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3jyq"]
atlas = ExtResource("1_7yth2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo4gs"]
atlas = ExtResource("1_7yth2")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oesu"]
atlas = ExtResource("1_7yth2")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_84ut0"]
atlas = ExtResource("1_7yth2")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlg07"]
atlas = ExtResource("1_7yth2")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dwoi8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgp7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoqhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ajpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsu7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu5kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3jyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo4gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oesu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84ut0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlg07")
}],
"loop": true,
"name": &"ataque",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ops3k")
}],
"loop": true,
"name": &"sprite",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fgp7v"]
shader = ExtResource("5_ops3k")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 999.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[sub_resource type="Animation" id="Animation_cpynn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [SubResource("SpriteFrames_dwoi8")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"sprite"]
}

[sub_resource type="Animation" id="Animation_hwk2y"]
resource_name = "ataque"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.7666667, 1.9666666, 2.1666665, 2.3666666, 2.5666666, 2.7666667, 2.9666667, 3.1666665),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [SubResource("SpriteFrames_dwoi8")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [&"ataque", &"ataque"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 3.3333333)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/ColorRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ops3k"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aoqhr"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15430208, 0.28998148),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.54901963), Color(1, 1, 1, 0.25490198), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_uihqj"]
resource_name = "sprite"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"sprite"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jmvj"]
_data = {
&"RESET": SubResource("Animation_cpynn"),
&"attack": SubResource("Animation_hwk2y"),
&"dead": SubResource("Animation_ops3k"),
&"hurt": SubResource("Animation_aoqhr"),
&"walk": SubResource("Animation_uihqj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_quguv"]
radius = 17.0
height = 55.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ops3k"]
radius = 17.5
height = 61.666664

[sub_resource type="AtlasTexture" id="AtlasTexture_ops3k"]
atlas = ExtResource("2_xbayu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjikm"]
atlas = ExtResource("2_xbayu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6p7c"]
atlas = ExtResource("2_xbayu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_844q5"]
atlas = ExtResource("2_xbayu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4118a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ops3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjikm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6p7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_844q5")
}],
"loop": true,
"name": &"cabo",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7ajpc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("cabo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("cabo2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cabo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("cabo2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("cabo4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cabo4:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/path = NodePath("cabo3:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("cabo3:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("cabo:sprite_frames")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_4118a")]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("cabo4:sprite_frames")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_4118a")]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("cabo4:animation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"cabo"]
}

[sub_resource type="Animation" id="Animation_lsu7v"]
resource_name = "cabo"
length = 2.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cabo2:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_4118a")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cabo2:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"cabo"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cabo2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("cabo2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("cabo3:sprite_frames")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_4118a")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cabo3:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"cabo"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("cabo3:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.29999995, 0.60000014, 0.89999986, 1.2, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("cabo3:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("cabo:sprite_frames")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.7999999),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_4118a")]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("cabo:animation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.7999999),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"cabo"]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("cabo:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.8333333, 1.1333332, 1.4333334, 1.7333331, 2.0333333, 2.3333335, 2.5333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("cabo:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.8333333, 2.5333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("cabo4:sprite_frames")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.8333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_4118a")]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("cabo4:animation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0.8333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"cabo"]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("cabo4:frame")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0.8333333, 1.1333332, 1.4333334, 1.7333331, 2.0333333, 2.3333335, 2.5333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("cabo4:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0.8333333, 2.5333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("../Cabo/CollisionShape2D:disabled")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0.36666667, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("../Cabo/CollisionShape2D2:disabled")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("../Cabo/CollisionShape2D3:disabled")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0.39999998, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("../Cabo/CollisionShape2D4:disabled")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsu7v"]
_data = {
&"RESET": SubResource("Animation_7ajpc"),
&"cabo": SubResource("Animation_lsu7v")
}

[sub_resource type="GDScript" id="GDScript_ops3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aoqhr"]
size = Vector2(7.5, 35)

[node name="mal_cabeado" type="CharacterBody2D"]
z_index = 98
scale = Vector2(1.2, 1.2)
script = ExtResource("1_xbayu")
deathParticle = ExtResource("2_aoqhr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dwoi8")
animation = &"sprite"

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
visible = false
material = SubResource("ShaderMaterial_fgp7v")
anchors_preset = -1
anchor_right = 0.020000001
anchor_bottom = 0.017
offset_left = -21.0
offset_top = -32.0
offset_right = 13.72
offset_bottom = 25.912

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3jmvj")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_quguv")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="hitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(0, -3.3333333)
shape = SubResource("CapsuleShape2D_ops3k")

[node name="cabos" type="Node2D" parent="."]

[node name="cabo" type="AnimatedSprite2D" parent="cabos"]
visible = false
position = Vector2(-63.666664, -16.16666)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_4118a")
animation = &"cabo"
frame = 3

[node name="cabo2" type="AnimatedSprite2D" parent="cabos"]
visible = false
position = Vector2(-27.833344, -15.333328)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_4118a")
animation = &"cabo"

[node name="cabo3" type="AnimatedSprite2D" parent="cabos"]
visible = false
position = Vector2(42.166664, -15.333328)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_4118a")
animation = &"cabo"

[node name="cabo4" type="AnimatedSprite2D" parent="cabos"]
visible = false
position = Vector2(77.16665, -16.16666)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_4118a")
animation = &"cabo"
frame = 3

[node name="cabo" type="AnimationPlayer" parent="."]
root_node = NodePath("../cabos")
libraries = {
&"": SubResource("AnimationLibrary_lsu7v")
}

[node name="Cabo" type="Area2D" parent="."]
monitorable = false
script = SubResource("GDScript_ops3k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cabo"]
position = Vector2(-70, 10.833333)
shape = SubResource("RectangleShape2D_aoqhr")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Cabo"]
position = Vector2(-34.999992, 10.833333)
shape = SubResource("RectangleShape2D_aoqhr")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Cabo"]
position = Vector2(35.000008, 10.833333)
shape = SubResource("RectangleShape2D_aoqhr")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Cabo"]
position = Vector2(70, 10.833333)
shape = SubResource("RectangleShape2D_aoqhr")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="Attack Cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="healthBar" parent="." instance=ExtResource("6_fgp7v")]
offset_left = -35.833332
offset_top = 32.5
offset_right = 35.166668
offset_bottom = 40.833332

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="hitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="Cabo" to="." method="_on_cabo_area_entered"]
[connection signal="timeout" from="Attack Cooldown" to="." method="_on_attack_cooldown_timeout"]
